20.0.14
-------


20.0.13
-------
(RB=1258283)
Fixed thread safety issue for JacksonDataCodec due to its PrettyPrinter.

20.0.12
-------
(RB=1257038)
fix MPConsistentHashRing iterator bug when the host list is empty

(RB=1257667)
Fixing ZooKeeperConnectionAwareStore unneeded exception. Improving error logs in SimpleLoadBalancer

20.0.11
-------
(RB=1255476)
add more tests for MPConsistentHashRing iterator

(RB=1206912)
Adding ability to pass down the provider of the list of downstream services.

(RB=1255634)
Moving HttpServerBuilder to a module accessible also from other tests

20.0.10
-------
(RB=1236493)
Implement d2 degrader preemptive request timeout


20.0.9
------
(RB=1253124)
modified MPConsistentHashRing iterator

(RB=1253858)
updated tests due to changing behavior of MPConsistentHashRing iterator

20.0.8
------
(RB=1244383)
Adding SSL session resumption to Http1.1

20.0.7
------
(RB=1246458)
Allow configurable number of hash ring points per host to improve traffic balance

20.0.6
------
(RB=1248284)
Fix Client class to be backward compatible

20.0.5
------
(RB=1239452)
Support for injecting metadata in Rest.Li response

(RB=1227286)
Refactoring internal LoadBalancer interfaces to async model

(RB=1229750)
Added XXHash as an alternative to MD5 for PartitionAccessor

(RB=1231618)
Enable setting default values for custom type parameters.

(RB=1236289)
Set proper default for HttpServerBuilder class

(RB=1246492)
Add DistrbutionNonDiscreteRing for distribution-based routing

20.0.4
------
(RB=1223876)
Moved Entity Stream implementation to a new entity-stream module and made it generic. Added adapters between generic
Entity Stream and ByteString-specific Entity Stream so that existing R2 Streaming API didn't change.

(RB=1240888)
Add filter method in Multiplexer custom filter to filter all individual requests. This can be used to filter/check
if the combination of individual requests can be handled.

20.0.3
------
(RB=1235367)